orchestrator/kubernetes/orchestrator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator
  labels:
    app.kubernetes.io/name: orchestrator
    app.kubernetes.io/component: controller
    app.kubernetes.io/part-of: idegym
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: orchestrator
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
